diesel_compile_tests/tests/fail/insert_on_conflict_do_update_where_not_supported_on_sqlite.stderr
error[E0277]: the trait bound `sqlite::backend::SqliteOnConflictClause: SupportsOnConflictClauseWhere` is not satisfied
    --> tests/fail/insert_on_conflict_do_update_where_not_supported_on_sqlite.rs:21:18
     |
21   |         .execute(&mut connection)
     |          ------- ^^^^^^^^^^^^^^^ the trait `SupportsOnConflictClauseWhere` is not implemented for `sqlite::backend::SqliteOnConflictClause`
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `SupportsOnConflictClauseWhere` is implemented for `pg::backend::PgOnConflictClause`
     = note: required for `OnConflictValues<ValuesClause<..., ...>, ..., ..., ...>` to implement `QueryFragment<Sqlite>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<table, OnConflictValues<..., ..., ..., ...>>` to implement `QueryFragment<Sqlite>`
     = note: required for `InsertStatement<table, OnConflictValues<..., ..., ..., ...>>` to implement `ExecuteDsl<diesel::SqliteConnection, Sqlite>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     For more information about this error, try `rustc --explain E0277`.
